passed a few tests for select box

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,6 +12,7 @@
   <script type="text/javascript" src="lib/jasmine-2.0.1/jasmine-html.js"></script>
   <script type="text/javascript" src="lib/jasmine-2.0.1/boot.js"></script>
   <script type="text/javascript" src="lib/jquery-2.1.1/jquery-2.1.1.js"></script>
+  <script type="text/javascript" src="lib/underscore-1.8.2/underscore.js"></script>
   <script type="text/javascript" src="lib/jasmine-jquery-2.0.5/jasmine-jquery.js"></script>
 
   <!-- include source files here... -->
